# retailer

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  alembic.ini  docker-compose.yml  docker-compose2.yml  docker-compose_deploy.yml  docker-compose_old.yml  example.env  pyproject.toml  requirements.txt  requirements_admin.txt  requirements_app.txt  run_api.sh  run_project.py  start.py
.github/workflows/: deployment.yml  docker-image.yml  pipeline.yml  test.yml
.run/: Run tests.run.xml  allure.run.xml
alembic/: env.py
alembic/versions/: 2022_04_02_21_20_20_b6a744784764_auth_tables_was_added.py  2022_04_02_21_20_30_d458c13646b7_customers_and_addresses_tables_were_.py  2022_04_02_21_20_auth_tables_was_added.py  2022_04_02_22_40_36_3dc8529d8689_users_data_was_added.py  2022_04_03_01_37_44_39f94d3d830d_addresses_table_was_added.py  2022_04_03_01_37_44_39f94d3d830d_customers_and_addresses_tables_were_.py  2022_04_03_01_37_44_39f94d3d830d_customers_and_addresses_tables_were_added.py  2022_04_03_01_37_44_39f94d3d830d_user_addresses_table_was_added.py  2022_04_03_01_37_45_ed5f34fdabb8_customers_data_was_added.py  2022_04_03_01_38_46_59ca10a9bd19_addresses_data_was_added.py  2022_04_03_01_38_46_59ca10a9bd19_customer_addresses_data_was_added.py  2022_04_03_01_38_46_59ca10a9bd19_user_addresses_data_was_added.py  2022_04_03_01_39_46_49f94d3d830d_shops_table_was_added.py  2022_04_03_01_39_shops_table_was_added.py  2022_04_03_01_59_52_6396f15cadeb_shop_addresses_data_was_added.py  2022_04_03_01_59_52_6396f15cadeb_shops_data_was_added.py  2022_04_10_18_01_46_1551d7b903c9_products_and_categories_tables_were_added.py  2022_04_10_18_09_35_c2f80473fa1c_product_categories_data_was_added.py  2022_04_10_18_21_35_c2f80473fa1c_products_data_was_added.py  2022_04_10_18_21_35_df280473fa1c_products_data_was_added.py  2022_04_17_15_45_15_547a17f639a0_users_roles_were_added.py  2022_04_17_15_45_staff_table_was_added.py  2022_05_01_14_02_52_9b55a88e1cd5_shop_addresses_table_was_added.py  (+9 more)
app/addresses/: models.py
deploy/: deploy.sh  docker-compose.test.yml  docker-compose.yml  down.sh
docs/: carts  crow's-foot  retailer-arch (1).drawio  retailer-arch.drawio  retailer.drawio  usecase-client.puml  usecase-client_2.puml  usecase-manager.puml  usecase-manager2.puml  usecase-retailer.puml  usecase-staff.puml
retailer/: alembic.ini  app.env  config.py  run.sh
retailer_admin/: example__django.env  manage.py  requirements.txt  run.sh
(+326 files in other folders)
