[tool.poetry]
name = "retailer"
version = "1.0.0"
description = "Retailer"
authors = ["d_ivahnencko"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.0.3"
aiobotocore = "^2.3.2"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
aioredis = "^2.0.1"
alembic = "^1.8.0"
passlib = "^1.7.4"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
python-jose = "^3.3.0"
Faker = "^13.12.0"
SQLAlchemy = "^1.4.37"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
uvloop = "^0.16.0"
email-validator = "^1.2.1"
python-multipart = "^0.0.5"
asyncpg = "^0.25.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
