[tool.poetry]
name = "retailer"
version = "1.0.1"
description = "Retailer"
authors = ["d_ivahnencko"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.0.3"
aiobotocore = "^2.3.2"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
aioredis = "^2.0.1"
alembic = "^1.8.0"
passlib = "^1.7.4"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
python-jose = "^3.3.0"
Faker = "^13.12.0"
SQLAlchemy = "^1.4.37"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
uvloop = "^0.16.0"
email-validator = "^1.2.1"
python-multipart = "^0.0.5"
asyncpg = "^0.25.0"
beautifulsoup4 = "^4.11.1"
pytest = "^7.1.3"
greenlet = "^1.1.3.post0"
bcrypt = "^4.0.1"
pytest-asyncio = "^0.20.1"
pip = "^22.3"
install = "^1.3.5"
pytest-mock = "^3.10.0"
pytest-freezegun = "^0.4.2"
allure-pytest = "^2.11.1"
requests = "^2.28.1"
httpx = "^0.23.1"
asgi-lifespan = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
matplotlib = "^3.5.2"
beautifulsoup4 = "^4.11.1"
black = "^22.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "retailer"
filterwarnings = [
    "ignore::DeprecationWarning"
]





[tool.poetry.group.linters.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.black]
line-length = 79
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | env
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 79
skip_glob = ["*/*/alembic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
